refactor: inject chat history persistence